# structure_factor

./: .gitignore  CMakeLists.txt  README.md
structure_factor/: CMakeLists.txt  CachedAllocator.h  DynamicStructureFactor.cc  DynamicStructureFactor.h  DynamicStructureFactorGPU.cc  DynamicStructureFactorGPU.cu  DynamicStructureFactorGPU.cuh  DynamicStructureFactorGPU.h  ExecutionConfiguration.cc  ExecutionConfiguration.h  HelperMath.h  Messenger.h  MyGPUArray.h  StaticStructureFactor.cc  StaticStructureFactor.h  StaticStructureFactorGPU.cc  StaticStructureFactorGPU.cu  StaticStructureFactorGPU.cuh  StaticStructureFactorGPU.h  VectorMath.h  __init__.py  cudacpu_host_defines.h  module.cc  structure_class.py
